- Better shuffle algorithm
- Fixed silence detection when playback paused

Improved Sinclair QL emulation:
- Allow to increase Sinclair QL RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector

Improved ZX Vision:
- Allow to hide minimized windows
- Allow to place windows beyond ZEsarUX main window limits
- Do not reopen menu when closing a Window
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
- Hide cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop
- Preserve icon name when changing its type
- Added rzx files support for file selector: can be expanded (to z80 snap file), show file previews, convert to SCR, convert to Z80, use as ZX Desktop background
- Fixed glitch duplicating Main Menu when pressing F6 on Main Menu

Improved Debug CPU:
- Show port number when opcode IN. Show keyboard row when port is XXFEH on Spectrum
- Show view number inside the window and not in the window title
- Added pass count to breakpoints (a breakpoint that is triggered when the condition is hit a certain times)
- Improved edit breakpoint window
- Added option to enable/disable all breakpoints
- Fixed moving cursor up when address near 0

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line
Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed toggle breakpoint on a position that already had a breakpoint when breakpoints were disabled

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes: