@@ -155,7 +155,8 @@ ok *seleccion de linea familia actual y maquina actual al abrir el menu segun ma
   lo haga si esta en un full rescan de index, como hacen los otros tipos de manufacturer y nombre
 
 
--timeline.tap. tape browser dice que linea de inicio es 11112
-
-
 -aventura barco5.tap generar "ejecutable" dentro de la misma cinta para poder testear sin tener que cargar antes el paw
+
+-Lectura teclas en input menú
+Tener tecla anterior
+Como saber tecla actual si está la anterior y actual las dos pulsadas
